Tue Mar 13 09:36:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Gestalt.cpp:
          Fixed bugzilla 4008, thanks to Derek Dominish
          <derek dot dominish at dsto dot defence dot gov dot au> for
          creating the fix

Tue Mar 13 09:29:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4008_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New test for bugzilla 4008. Thanks to Derek Dominish
          <derek dot dominish at dsto dot defence dot gov dot au> for
          creating this test

Mon Mar 12 20:22:17 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          Revert this part of Friday's change, with a comment added
          to describe why this use of 'pwd' is different.

Fri Mar  9 20:38:22 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.lib.GNU:

          When creating an archive library, use all object files instead of
          just modified object files.  This fixes a bug that can occur when
          two different subdirectories have objects files with the same name.
          The archive dosn't track directory names so "replacing" one changed
          object could actually be clobbering another one.

        * include/makeinclude/rules.local.GNU:

          Use the $(PWD) make variable for current directory.

Wed Mar  7 14:58:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Added new download link for latest minor with versioned namespaces

Wed Mar  7 14:37:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Fix for ppc64

Wed Mar  7 13:31:58 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Base_Thread_Adapter.h:
        * ace/Base_Thread_Adapter.cpp:
        * ace/ETCL/ETCL_Constraint.inl:
        * ace/Module.cpp:
        * ace/Stream.cpp: